Fix Cart Lightbox has horizontal scrolling in IE7 (refs #8333)
svn commit r68510

--- a/www/styles/store-cart-lightbox.css
+++ b/www/styles/store-cart-lightbox.css
@@ -108,7 +108,7 @@
 
 #store_cart_lightbox #lightbox_cart_view.swat-table-view {
 	margin: 0;
-	width: 100%;
+	width: auto;
 }
 
 #store_cart_lightbox #lightbox_cart_view.swat-table-view th {
